--- a/package.json
+++ b/package.json
@@ -8,16 +8,17 @@
     "url": "https://github.com/gatsbyjs/gatsby/issues"
   },
   "dependencies": {
+    "@weknow/gatsby-remark-twitter": "^0.2.1",
     "gatsby": "^2.13.3",
     "gatsby-image": "^2.2.4",
     "gatsby-plugin-feed": "^2.3.2",
-    "gatsby-plugin-google-analytics": "^2.1.1",
     "gatsby-plugin-manifest": "^2.2.1",
     "gatsby-plugin-offline": "^2.2.1",
     "gatsby-plugin-react-helmet": "^3.1.0",
     "gatsby-plugin-sharp": "^2.2.2",
     "gatsby-plugin-typography": "^2.3.0",
     "gatsby-remark-copy-linked-files": "^2.1.0",
+    "gatsby-remark-external-links": "^0.0.4",
     "gatsby-remark-images": "^3.1.2",
     "gatsby-remark-prismjs": "^3.3.1",
     "gatsby-remark-responsive-iframe": "^2.2.1",
@@ -25,15 +26,17 @@
     "gatsby-source-filesystem": "^2.1.2",
     "gatsby-transformer-remark": "^2.6.0",
     "gatsby-transformer-sharp": "^2.2.1",
+    "prism-themes": "^1.1.0",
     "prismjs": "^1.16.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
     "react-typography": "^0.16.19",
-    "typeface-merriweather": "0.0.72",
-    "typeface-montserrat": "0.0.54",
+    "styled-components": "^4.3.2",
+    "typeface-lato": "^0.0.54",
+    "typeface-neuton": "^0.0.72",
     "typography": "^0.16.19",
-    "typography-theme-wordpress-2016": "^0.16.19"
+    "typography-theme-stow-lake": "^0.16.19"
   },
   "devDependencies": {
     "prettier": "^1.18.2"
