--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gatsby-plugin-sharp": "^2.2.2",
     "gatsby-plugin-typescript": "^2.1.0",
     "gatsby-plugin-typography": "^2.3.0",
+    "gatsby-remark-autolink-headers": "^2.1.3",
     "gatsby-remark-copy-linked-files": "^2.1.0",
     "gatsby-remark-external-links": "^0.0.4",
     "gatsby-remark-images": "^3.1.2",
@@ -40,7 +41,6 @@
     "typography-theme-stow-lake": "^0.16.19"
   },
   "devDependencies": {
-    "gh-pages": "^2.0.1",
     "prettier": "^1.18.2"
   },
   "homepage": "https://perf.markon.codes",
